--- a/styles/ApplicationOuter.module.css
+++ b/styles/ApplicationOuter.module.css
@@ -2,18 +2,18 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
   text-align: center;
-  padding: 30px;
-  width: 300px;
+  padding: 20px;
+  width: 200px;
   font-family: "Poppins", sans-serif;
   margin-right: 100px;
 }
 
 .application_outer_name {
-  font-size: 30px;
-  margin-bottom: 10px;
+  font-size: 20px;
+  margin-bottom: 0px;
 }
 
 .application_outer_noOfDays {
-  font-size: 25px;
-  margin-top: 0px;
+  font-size: 15px;
+  margin: 0;
 }
