--- a/styles/LeftPaneMunicipalityDashboard.module.css
+++ b/styles/LeftPaneMunicipalityDashboard.module.css
@@ -1,9 +1,8 @@
 .LeftPaneMunicipalityDashboard_container {
-  min-width: 350px;
-  width: 15vw;
+  width: 280px;
   background-color: #000080;
   min-height: 100vh;
-  padding: 50px 0px;
+  padding: 30px 0px;
   position: fixed;
 }
 
@@ -11,7 +10,8 @@
   color: #fff;
   text-align: center;
   font-weight: 500;
-  margin-top: 20px;
+  margin-top: 10px;
+  font-size: 20px;
 }
 
 .municipality_logout {
@@ -25,7 +25,7 @@
 }
 
 .municipality_logout p {
-  font-size: 27px;
+  font-size: 15px;
   text-transform: uppercase;
   margin-left: 10px;
 }
