--- a/styles/MunicipalityDashboard.module.css
+++ b/styles/MunicipalityDashboard.module.css
@@ -7,8 +7,8 @@
   background-color: rgba(196, 196, 196, 0.2);
   border-radius: 20px;
   width: 100%;
-  margin-top: 50px;
-  padding: 20px;
+  margin-top: 20px;
+  padding: 5px 20px;
   display: flex;
   align-items: center;
 }
@@ -17,7 +17,7 @@
   border: none;
   background: transparent;
   margin-left: 5px;
-  font-size: 20px;
+  font-size: 12px;
   color: #cccccc;
   font-family: "Poppins", sans-serif;
 }
@@ -26,12 +26,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 50px 0px;
+  margin: 30px 0px;
 }
 
 .applications_container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 100px;
+  margin-bottom: 30px;
 }
