--- a/styles/MunicipalityDetails.module.css
+++ b/styles/MunicipalityDetails.module.css
@@ -4,26 +4,29 @@
   justify-content: space-between;
   padding: 0px 20px;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 10px;
   margin-bottom: -10px;
 }
 
 .municipality_details_heading {
   color: #fff;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 700;
 }
 
 .municipality_address {
   padding-left: 35px;
   color: #fff;
-  font-size: 23px;
-  line-height: 1.5;
+  font-size: 18px;
+}
+
+.municipality_address > p {
+  margin: 5px;
 }
 
 .municipality_email {
-  margin-top: 50px;
+  margin-top: 30px;
   color: #fff;
-  font-size: 25px;
+  font-size: 20px;
   text-align: center;
 }
