--- a/styles/MunicipalityStat.module.css
+++ b/styles/MunicipalityStat.module.css
@@ -1,21 +1,33 @@
 .municipality_stat_container {
   box-shadow: 4px 4px 4px 3px rgba(0, 0, 0, 0.25);
   border-radius: 60px;
-  min-width: 200px;
+  min-width: 150px;
   color: white;
   font-family: Roboto;
   font-weight: bold;
   text-align: center;
-  width: 20vw;
+  width: 15vw;
 }
 
 .municipality_stat_title {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bolder;
-  margin-bottom: 0px;
+  margin: 15px 0 0 0;
 }
 
 .municipality_stat_value {
-  font-size: 40px;
-  margin-top: 10px;
+  font-size: 25px;
+  margin: 10px 0 15px 0;
+}
+
+@media (max-width: 900px) {
+  .municipality_stat_container {
+    min-width: 80px;
+  }
+  .municipality_stat_title {
+    font-size: 10px;
+  }
+  .municipality_stat_value {
+    font-size: 15px;
+  }
 }
