--- a/styles/TypeOfCertificate.module.css
+++ b/styles/TypeOfCertificate.module.css
@@ -1,20 +1,19 @@
 .typeofcertificate_container {
   background-color: #fff;
-  min-width: 380px;
-  width: 18vw;
+  min-width: 320px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   border-radius: 0 10px 10px 0px;
   color: black;
-  padding: 10px;
+  /* padding: 10px; */
   z-index: 2;
-  margin-top: 50px;
+  margin-top: 30px;
   display: flex;
   flex-direction: row;
   padding-left: 40px;
 }
 
 .typeofcertificate_container_text {
-  font-size: 25px;
+  font-size: 15px;
   font-family: "Roboto", sans-serif;
   margin-left: 5px;
 }
