ADDED: superadmin panel

--- a/styles/ApplicationOuter.module.css
+++ b/styles/ApplicationOuter.module.css
@@ -5,7 +5,8 @@
   padding: 20px;
   width: 200px;
   font-family: "Poppins", sans-serif;
-  margin-right: 100px;
+  margin: auto;
+  margin-bottom: 20px;
 }
 
 .application_outer_name {
