feat: Add Apply certificate page

--- a/styles/FormUI.module.css
+++ b/styles/FormUI.module.css
@@ -24,3 +24,9 @@
   border-radius: 10px;
   height: 50px;
 }
+
+.formContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
