--- a/styles/SuperAdminPanel.module.css
+++ b/styles/SuperAdminPanel.module.css
@@ -9,7 +9,7 @@
   /* padding: 10px; */
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-left: 50px;
   margin-bottom: 50px;
@@ -23,5 +23,7 @@
 @media (max-width: 600px) {
   .add_municipality_container {
     flex-direction: column;
+    margin-left: 0;
+    padding: 0 50px;
   }
 }
