--- a/styles/LeftPaneMunicipalityDashboard.module.css
+++ b/styles/LeftPaneMunicipalityDashboard.module.css
@@ -29,3 +29,11 @@
   text-transform: uppercase;
   margin-left: 10px;
 }
+
+@media (max-width: 700px) {
+  .LeftPaneMunicipalityDashboard_container {
+    width: 100%;
+    z-index: 1;
+    display: none;
+  }
+}
