--- a/styles/ApplicationOuter.module.css
+++ b/styles/ApplicationOuter.module.css
@@ -8,6 +8,8 @@
   margin-bottom: 20px;
   cursor: pointer;
   margin-right: 20px;
+  height: 170px;
+  width: 200px;
 }
 
 .application_outer_name {
