--- a/styles/UserLogin.module.css
+++ b/styles/UserLogin.module.css
@@ -9,4 +9,35 @@
 
 .bottomText {
   text-align: center;
+  margin-top: -20px;
+  margin-bottom: 30px;
+}
+
+.googlecontainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  width: 250px;
+  margin: auto;
+  margin-top: 30px;
+}
+.googlecontainer > p {
+  margin-left: 10px;
+}
+
+.orline {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid #000080;
+  line-height: 0.1em;
+  margin: 10px 0 20px;
+}
+
+.orline span {
+  background: #fff;
+  padding: 0 10px;
 }
