--- a/styles/MunicipalityStat.module.css
+++ b/styles/MunicipalityStat.module.css
@@ -1,6 +1,6 @@
 .municipality_stat_container {
   box-shadow: 4px 4px 4px 3px rgba(0, 0, 0, 0.25);
-  border-radius: 60px;
+  border-radius: 30px;
   min-width: 150px;
   color: white;
   font-family: Roboto;
@@ -8,6 +8,7 @@
   text-align: center;
   width: 15vw;
   margin-right: 20px;
+  padding: 10px 0px;
 }
 
 .municipality_stat_title {
