--- a/styles/SuperAdminPanel.module.css
+++ b/styles/SuperAdminPanel.module.css
@@ -9,7 +9,7 @@
   /* padding: 10px; */
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   margin-left: 50px;
   margin-bottom: 50px;
@@ -18,6 +18,27 @@
 .municipality_container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  margin-left: 50px;
+}
+
+.superadminselectioncomponent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000080;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.superadminselectioncomponent > p {
+  cursor: pointer;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #000080;
+  padding: 10px 20px;
+  border-radius: 10px;
 }
 
 @media (max-width: 600px) {
