--- a/styles/User_Birth_Certificate.module.css
+++ b/styles/User_Birth_Certificate.module.css
@@ -39,3 +39,23 @@
 .sharebtn > p {
   margin-left: 10px;
 }
+
+.orline {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid #000080;
+  line-height: 0.1em;
+  margin: 10px 0 20px;
+}
+
+.orline span {
+  background: #fff;
+  padding: 0 10px;
+}
+
+.addAccessHeader {
+  font-size: 20px;
+  text-align: center;
+  font-family: "Poppins";
+  text-transform: uppercase;
+}
