--- a/styles/SuperAdminPanel.module.css
+++ b/styles/SuperAdminPanel.module.css
@@ -1,3 +1,9 @@
+.header_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .page_title {
   font-size: 20px;
   margin: 15px;
